--- a/config/viruses/covid-19.ini
+++ b/config/viruses/covid-19.ini
@@ -3,3 +3,9 @@ HEAVY_MORT_RATE=0.1
 MILD_MORT_RATE=0.1
 HOSP_PERIOD=2
 SPREAD_RATE=2
+INCR_SPEC_IMMUN_CONSTANT=1/IMMUN_DAYS
+INCR_VIR_LOAD_CONSTANT=200
+VIR_LOAD_THRESHOLD=800
+MILD_THRESHOLD=3500
+SEVERE_THRESHOLD=5000
+DEAD_THRESHOLD=6000
