added original formules

--- a/config/viruses/covid-19.ini
+++ b/config/viruses/covid-19.ini
@@ -1,10 +1,10 @@
 [Virus]
-HEAVY_MORT_RATE=0.1
-MILD_MORT_RATE=0.1
-HOSP_PERIOD=2
-SPREAD_RATE=2
-INCR_SPEC_IMMUN_CONSTANT=1/IMMUN_DAYS
-INCR_VIR_LOAD_CONSTANT=200
+LAG=5
+NON_SPECIFIC_IMMUN_MEAN=0.2
+NON_SPECIFIC_IMMUN_SIGMA=0.1
+SPECIFIC_IMMUN_MEAN=0.2
+SPECIFIC_IMMUN_SIGMA=0.1
+SPREAD_RATE=0.2
 VIR_LOAD_THRESHOLD=800
 MILD_THRESHOLD=3500
 SEVERE_THRESHOLD=5000
